--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@tensorflow/tfjs": "^4.22.0",
+    "cli-progress": "^3.12.0",
     "express": "^5.2.1",
     "genetic-js": "^0.1.14",
     "path": "^0.12.7",
